--- a/ModuleLogic/test-output/emailable-report.html
+++ b/ModuleLogic/test-output/emailable-report.html
@@ -8,11 +8,13 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">43,552</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">120,076</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.build.TestModule</td><td><a href="#m0">m1</a></td><td rowspan="1">1727090210876</td><td rowspan="1">43068</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.build.DemoModule</td><td><a href="#m0">m2</a></td><td rowspan="1">1727145156761</td><td rowspan="1">37229</td></tr><tr class="passedodd"><td rowspan="1">com.build.SampleModule</td><td><a href="#m1">m3</a></td><td rowspan="1">1727145193997</td><td rowspan="1">60291</td></tr><tr class="passedeven"><td rowspan="1">com.build.TestModule</td><td><a href="#m2">m1</a></td><td rowspan="1">1727145134328</td><td rowspan="1">22416</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.build.TestModule#m1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.build.DemoModule#m2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.build.SampleModule#m3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.build.TestModule#m1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
