--- a/ModuleLogic/test-output/old/Suite/methods.html
+++ b/ModuleLogic/test-output/old/Suite/methods.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="caa560">  <td>24/09/23 16:44:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestModule.m1()[pri:0, instance:com.build.TestModule@1e04fa0a]">m1</td> 
-  <td>main@1273143001</td>   <td></td> </tr>
+<tr bgcolor="b9e78c">  <td>24/09/24 08:02:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoModule.m2()[pri:0, instance:com.build.DemoModule@3a44431a]">m2</td> 
+  <td>main@764419760</td>   <td></td> </tr>
+<tr bgcolor="caa560">  <td>24/09/24 08:02:14</td>   <td>-22435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestModule.m1()[pri:0, instance:com.build.TestModule@2c35e847]">m1</td> 
+  <td>main@764419760</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>24/09/24 08:03:13</td>   <td>37236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleModule.m3()[pri:0, instance:com.build.SampleModule@3c7f66c4]">m3</td> 
+  <td>main@764419760</td>   <td></td> </tr>
 </table>
